tests/snapshot/error/stack_trace/dynamic_import_async_module.exp
Error: test
  ┌ stack_trace/top_level_await_module.js:2:9
  |
2 |   throw new Error('test');
  |         ^
Stack trace:
  at foo (stack_trace/top_level_await_module.js:2:9)
  at <module> (stack_trace/top_level_await_module.js:5:7)
  at <anonymous> (<native>)